--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -84,3 +84,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.ipa {
+  font-family: 'Inter';
+}
+
+.roman {
+  font-family: 'Junicode';
+}
