--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,16 +8,14 @@
   font-weight: normal;
 }
 
-a,
-.green {
+a {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: var(--jg-c-app-background);
   }
 }
 
@@ -32,4 +30,18 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
+}
+
+.ipa {
+  font-family: 'Inter';
+}
+
+.roman-small {
+  font-family: 'Junicode';
+  font-size: medium;
+}
+
+.roman-medium {
+  font-family: 'Junicode';
+  font-size: larger;
 }
