--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -21,6 +21,8 @@ button {
   --jg-c-low-contrast-text: var(--olive-11);
   --jg-c-text: var(--olive-12);
 
+  /* grass-9 */
+  --jg-c-solid-background-filter: invert(64%) sepia(8%) saturate(3281%) hue-rotate(79deg) brightness(87%) contrast(77%);
 
   --jg-c-low-contrast-text-highlight: var(--grass-12);
   --jg-c-text-highlight: var(--grass-11);
@@ -67,6 +69,9 @@ button {
     --jg-c-hovered-solid-background: var(--dark-grass-10);
     --jg-c-low-contrast-text: var(--dark-olive-11);
     --jg-c-text: var(--dark-olive-12);
+  
+    /* grass-9 */
+    --jg-c-solid-background-filter: invert(60%) sepia(8%) saturate(2568%) hue-rotate(79deg) brightness(90%) contrast(99%);
 
     --jg-c-low-contrast-text-highlight: var(--dark-grass-12);
     --jg-c-text-highlight: var(--dark-grass-11);
