--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   : #00a2c7;
+$secondary : #e93d82;
+$accent    : #e54d2e;
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
@@ -23,3 +23,68 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+$sky-1: #f9feff;
+$sky-2: #f1fafd;
+$sky-3: #e1f6fd;
+$sky-4: #d1f0fa;
+$sky-5: #bee7f5;
+$sky-6: #a9daed;
+$sky-7: #8dcae3;
+$sky-8: #60b3d7;
+$sky-9: #7ce2fe;
+$sky-10: #74daf8;
+$sky-11: #00749e;
+$sky-12: #1d3e56;
+
+$jade-1: #fbfefd;
+$jade-2: #f4fbf7;
+$jade-3: #e6f7ed;
+$jade-4: #d6f1e3;
+$jade-5: #c3e9d7;
+$jade-6: #acdec8;
+$jade-7: #8bceb6;
+$jade-8: #56ba9f;
+$jade-9: #29a383;
+$jade-10: #26997b;
+$jade-11: #208368;
+$jade-12: #1d3b31;
+
+$grass-1: #fbfefb;
+$grass-2: #f5fbf5;
+$grass-3: #e9f6e9;
+$grass-4: #daf1db;
+$grass-5: #c9e8ca;
+$grass-6: #b2ddb5;
+$grass-7: #94ce9a;
+$grass-8: #65ba74;
+$grass-9: #46a758;
+$grass-10: #3e9b4f;
+$grass-11: #2a7e3b;
+$grass-12: #203c25;
+
+$cyan-1: #fafdfe;
+$cyan-2: #f2fafb;
+$cyan-3: #def7f9;
+$cyan-4: #caf1f6;
+$cyan-5: #b5e9f0;
+$cyan-6: #9ddde7;
+$cyan-7: #7dcedc;
+$cyan-8: #3db9cf;
+$cyan-9: #00a2c7;
+$cyan-10: #0797b9;
+$cyan-11: #107d98;
+$cyan-12: #0d3c48;
+
+$crimson-1: #fffcfd;
+$crimson-2: #fef7f9;
+$crimson-3: #ffe9f0;
+$crimson-4: #fedce7;
+$crimson-5: #facedd;
+$crimson-6: #f3bed1;
+$crimson-7: #eaacc3;
+$crimson-8: #e093b2;
+$crimson-9: #e93d82;
+$crimson-10: #df3478;
+$crimson-11: #cb1d63;
+$crimson-12: #621639;
